fix red not showing up on unhover

--- a/src/App.css
+++ b/src/App.css
@@ -367,7 +367,7 @@ a {
   width: 100%;
   height: 3px;
   background: #f25757;
-  position: relative;
+  position: absolute;
   left: 0;
   bottom: 0;
   animation: Underline3 0.3s forwards;
